--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
-    <!-- App Name - Referenced in AndroidManifest.xml -->
     <string name="app_name">哨兵Sentinel</string>
-
-
     <string name="settings_title">设置</string>
     <string name="settings_category_model">模型</string>
     <string name="settings_category_notifications">通知</string>
@@ -12,9 +9,13 @@
     <string name="settings_category_background_optimization">后台优化</string>
     <string name="nav_title_preview">预览</string>
     <string name="nav_title_settings">设置</string>
-    <!-- In strings.xml -->
     <string name="preview_screen_title">哨兵 - 预览</string>
     <string name="preview_camera_placeholder">摄像头预览区</string>
     <string name="preview_status_stopped_placeholder">监控已停止</string>
     <string name="preview_start_monitoring_button">开始监控</string>
+    <string name="settings_category_general">通用</string>
+    <string name="general_settings_theme_title">应用主题</string>
+    <string name="theme_dark">深色模式</string>
+    <string name="theme_light">浅色模式</string>
+    <string name="theme_system">跟随系统</string> <!-- Optional, if we add system later -->
 </resources>
